2007-11-27  David Gilbert  <david.gilbert@object-refinery.com>

	* swt/org/jfree/experimental/swt/SWTGraphics2D.java:
	(drawImage(BufferedImage, BufferedImageOp, int, int)): Updated for method 
	moved to SWTUtils,
	(drawImage(Image, int, int, ImageObserver)): Implemented,
	(drawImage(Image, int, int, int, int, ImageObserver)): Likewise,
	(drawImage(Image, int, int, Color, ImageObserver)): Likewise,
	(drawImage(Image, int, int, int, int, Color, ImageObserver)): Likewise,
	(convertToSWT(BufferedImage)): Moved to SWTUtils.java,
	* swt/org/jfree/experimental/swt/SWTUtils.java:
	(convertAWTImageToSWT): New method,
	(convertToSWT(BufferedImage)): Moved from SWTGraphics2D.java.
	
----------  JFREECHART 1.0.8 RELEASED ------------------------

2007-11-23  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/dial/DialPointer.java
	(Pointer.fillPaint): New attribute,
	(Pointer.outlinePaint): Likewise,
	(Pointer(int)): Initialize new fields,
	(getFillPaint): New method,
	(setFillPaint): Likewise,
	(getOutlinePaint): Likewise,
	(setOutlinePaint): Likewise,
	(draw): Use new attributes,
	(equals): Check new fields,
	(hashCode): Likewise,
	(writeObject): Handle serialization for new fields,
	(readObject): Likewise,
	* tests/org/jfree/chart/plot/dial/junit/DialPointerTests.java
	(testEqualsPointer): New test method,
	(testSerialization2): Likewise.

2007-11-22  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/HashUtilities.java
	(hashCode(int, int)): New method,
	* source/org/jfree/chart/needle/ArrowNeedle.java
	* source/org/jfree/chart/needle/LineNeedle.java
	* source/org/jfree/chart/needle/LongNeedle.java
	* source/org/jfree/chart/needle/MeterNeedle.java
	* source/org/jfree/chart/needle/MiddlePinNeedle.java
	* source/org/jfree/chart/needle/PinNeedle.java
	* source/org/jfree/chart/needle/PlumNeedle.java
	* source/org/jfree/chart/needle/PointerNeedle.java
	* source/org/jfree/chart/needle/ShipNeedle.java